# OctoBot

./: .coveragerc  .coveralls.yml  .dockerignore  .drone.yml  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  appveyor.yml  azure-pipelines.yml  bot.py  cryptobot.py  dev_requirements.txt  doc_requirements.txt  docker-compose.https.yml  docker-compose.yml  docker-entrypoint.sh  downloaded_temp_tentacles  external_links.json  external_resources.json  full_requirements.txt  indicator.py  installer.py  launcher.py  main.py  octobot.hcl  octobot.py  octobot.yaml  okteto-pipeline.yml  (+15 more)
.do/: deploy.template.yaml
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  main.workflow
backtesting/: __init__.py  abstract_backtesting_test.py  backtester.py  backtesting.py  backtesting_util.py  data_collector.py  exchange_simulator.py  strategy_optimizer.py
backtesting_data/: binance_BTC_USDT_20180618_232713.data  binance_ETH_BTC_20180618_232713.data  binance_ETH_USDT_20180618_232713.data  binance_NEO_BTC_20180618_232713.data  binance_NEO_ETH_20180618_232713.data  binance_NEO_USDT_20180618_232713.data  binance_XRP_BTC_20180618_232713.data  binance_XRP_ETH_20180618_232713.data  binance_XRP_USDT_20180618_232713.data
config/: __init__.py  config.py  config_schema.json  cst.py  default_config.json  default_evaluator_config.json  default_tentacles_config.json  default_trading_config.json  (+2 more)
(+1026 files in other folders)
