[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths = tests
addopts = -v -x --ignore=setup.py --pep8
pep8maxlinelength = 127
pep8ignore =
    E402    # module level import not at top of file
    E241    # multiple spaces after ','
    E226    # missing white space around arithmetic operator
    E222    # multiple spaces after operator
    W391    # blank line at the end of file
    E701    # multiple statements on one line
    docs/source/conf.py ALL